<resources>
    <string name="app_name">Cinemapp</string>
    <string name="title_my_movies">Mis Peliculas</string>
    <string name="title_list_movies">Lista de Peliculas</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_details">Detalles de pelicula</string>
    <string name="votes_text">Votos: {votes}</string>
    <string name="votes_placeholder">{votes}</string>
    <string name="image_poster_content_description">image poster</string>
    <string name="backdrop_content_description">backdrop image</string>
    <string name="about_movie">Acerca de:</string>
    <string name="mark_as_seen">Marcar como vista</string>
    <string name="delete_from_list">Borrar de mi lista</string>
    <string name="empty_list">Lista vacía</string>
    <string name="movie_icon_content_description">Icono de pelicula</string>
    <string name="warning_icon_content_description">Icono de advertencia</string>
    <string name="no_internet_connection">Sin conexión a internet</string>
    <string name="atention_message">Atencion!</string>
</resources>